Fix 'Add notes' field being hidden by keyboard in the Add Event view

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -2648,6 +2648,7 @@ md-dialog-actions.dtp-buttons{
         width: calc(100% - 45px);
         font-size: 12px;
         resize: none;
+        min-height: 100px;
         box-sizing: border-box;
       }
     }
